monitor/heapster/monitor-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: kube-system 
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: monitor-dev.ebaotech.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: 80
